--- a/dearGui.ini
+++ b/dearGui.ini
@@ -9,12 +9,17 @@ Size=293,322
 Collapsed=0
 
 [Window][Window]
-Pos=60,60
-Size=79,48
+Pos=167,100
+Size=341,224
 Collapsed=0
 
 [Window][Inspector]
-Pos=689,104
-Size=267,371
+Pos=1431,24
+Size=448,724
+Collapsed=0
+
+[Window][Properties Winow]
+Pos=60,60
+Size=787,178
 Collapsed=0
 
