--- a/dearGui.ini
+++ b/dearGui.ini
@@ -14,12 +14,12 @@ Size=341,224
 Collapsed=0
 
 [Window][Inspector]
-Pos=1431,24
-Size=448,724
+Pos=941,141
+Size=448,743
 Collapsed=0
 
 [Window][Properties Winow]
-Pos=60,60
-Size=787,178
+Pos=50,-2
+Size=1424,201
 Collapsed=0
 
