--- a/imgui.ini
+++ b/imgui.ini
@@ -4,12 +4,30 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=941,17
-Size=379,424
+Pos=1733,147
+Size=179,854
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][Properties Winow]
-Pos=76,27
-Size=1263,105
+Pos=8,27
+Size=1904,118
 Collapsed=0
+DockId=0x00000001,0
+
+[Window][DockSpaceViewport_11111111]
+Size=1920,1009
+Collapsed=0
+
+[Window][DockSpace]
+Pos=0,0
+Size=1920,1009
+Collapsed=0
+
+[Docking][Data]
+DockSpace     ID=0x3FC20BEE Window=0x9A404470 Pos=8,27 Size=1904,974 Split=Y
+  DockNode    ID=0x00000001 Parent=0x3FC20BEE SizeRef=1904,118 Selected=0x132FF2B0
+  DockNode    ID=0x00000003 Parent=0x3FC20BEE SizeRef=1904,854 Split=X
+    DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=1723,974 CentralNode=1
+    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=179,974 Selected=0xF02CD328
 
