--- a/imgui.ini
+++ b/imgui.ini
@@ -4,16 +4,16 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=1733,147
-Size=179,854
+Pos=765,27
+Size=187,471
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000003,0
 
 [Window][Properties Winow]
-Pos=8,27
-Size=1904,118
+Pos=8,500
+Size=944,32
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000005,0
 
 [Window][DockSpaceViewport_11111111]
 Size=1920,1009
@@ -21,13 +21,19 @@ Collapsed=0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1920,1009
+Size=960,540
 Collapsed=0
 
+[Window][View Port]
+Pos=8,27
+Size=755,471
+Collapsed=0
+DockId=0x00000002,0
+
 [Docking][Data]
-DockSpace     ID=0x3FC20BEE Window=0x9A404470 Pos=8,27 Size=1904,974 Split=Y
-  DockNode    ID=0x00000001 Parent=0x3FC20BEE SizeRef=1904,118 Selected=0x132FF2B0
-  DockNode    ID=0x00000003 Parent=0x3FC20BEE SizeRef=1904,854 Split=X
-    DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=1723,974 CentralNode=1
-    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=179,974 Selected=0xF02CD328
+DockSpace     ID=0x3FC20BEE Window=0x9A404470 Pos=8,27 Size=944,505 Split=Y
+  DockNode    ID=0x00000004 Parent=0x3FC20BEE SizeRef=1904,940 Split=X
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=755,974 CentralNode=1 Selected=0xE46ACB13
+    DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=187,974 Selected=0xF02CD328
+  DockNode    ID=0x00000005 Parent=0x3FC20BEE SizeRef=1904,32 Selected=0x132FF2B0
 
