--- a/imgui.ini
+++ b/imgui.ini
@@ -4,16 +4,16 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=765,27
-Size=187,471
+Pos=1803,27
+Size=109,940
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000007,0
 
 [Window][Properties Winow]
-Pos=8,500
-Size=944,32
+Pos=8,621
+Size=1793,346
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000004,0
 
 [Window][DockSpaceViewport_11111111]
 Size=1920,1009
@@ -21,19 +21,21 @@ Collapsed=0
 
 [Window][DockSpace]
 Pos=0,0
-Size=960,540
+Size=1920,1009
 Collapsed=0
 
 [Window][View Port]
 Pos=8,27
-Size=755,471
+Size=1793,592
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000003,0
 
 [Docking][Data]
-DockSpace     ID=0x3FC20BEE Window=0x9A404470 Pos=8,27 Size=944,505 Split=Y
-  DockNode    ID=0x00000004 Parent=0x3FC20BEE SizeRef=1904,940 Split=X
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=755,974 CentralNode=1 Selected=0xE46ACB13
-    DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=187,974 Selected=0xF02CD328
-  DockNode    ID=0x00000005 Parent=0x3FC20BEE SizeRef=1904,32 Selected=0x132FF2B0
+DockSpace       ID=0x3FC20BEE Window=0x9A404470 Pos=8,27 Size=1904,974 Split=Y
+  DockNode      ID=0x00000001 Parent=0x3FC20BEE SizeRef=1904,1011 Split=X Selected=0xE46ACB13
+    DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=1793,519 Split=Y Selected=0xE46ACB13
+      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1344,592 Selected=0xE46ACB13
+      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1344,346 Selected=0x132FF2B0
+    DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=109,519 Selected=0xF02CD328
+  DockNode      ID=0x00000006 Parent=0x3FC20BEE SizeRef=1904,32 CentralNode=1
 
