refactored, add line scaling, enabled object picking

--- a/imgui.ini
+++ b/imgui.ini
@@ -5,13 +5,13 @@ Collapsed=0
 
 [Window][Inspector]
 Pos=0,19
-Size=322,831
+Size=258,953
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Properties Winow]
-Pos=0,852
-Size=1728,120
+Pos=260,887
+Size=1468,85
 Collapsed=0
 DockId=0x00000005,0
 
@@ -25,15 +25,20 @@ Size=1728,972
 Collapsed=0
 
 [Window][View Port]
-Pos=324,19
-Size=1404,831
+Pos=260,19
+Size=1468,866
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000003,0
+
+[Window][Dear ImGui Demo]
+Pos=715,50
+Size=484,866
+Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0x3FC20BEE Window=0x9A404470 Pos=0,19 Size=1728,953 Split=Y
-  DockNode    ID=0x00000003 Parent=0x3FC20BEE SizeRef=1728,831 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=322,953 Selected=0xF02CD328
-    DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=1404,953 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
-  DockNode    ID=0x00000005 Parent=0x3FC20BEE SizeRef=1728,120 Selected=0x132FF2B0
+DockSpace     ID=0x3FC20BEE Window=0x9A404470 Pos=0,19 Size=1728,953 Split=X
+  DockNode    ID=0x00000001 Parent=0x3FC20BEE SizeRef=258,810 Selected=0xF02CD328
+  DockNode    ID=0x00000002 Parent=0x3FC20BEE SizeRef=1468,810 Split=Y
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1728,866 CentralNode=1 Selected=0xE46ACB13
+    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1728,85 Selected=0x132FF2B0
 
