added camera control system

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,16 +4,16 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=0,19
-Size=258,953
+Pos=1157,19
+Size=187,139
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Properties Winow]
-Pos=260,887
-Size=1468,85
+Pos=1157,19
+Size=187,737
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000002,0
 
 [Window][DockSpaceViewport_11111111]
 Size=1920,1009
@@ -21,24 +21,24 @@ Collapsed=0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1728,972
+Size=1344,756
 Collapsed=0
 
 [Window][View Port]
-Pos=260,19
-Size=1468,866
+Pos=0,19
+Size=1155,737
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Dear ImGui Demo]
-Pos=715,50
-Size=484,866
+Pos=370,85
+Size=613,582
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0x3FC20BEE Window=0x9A404470 Pos=0,19 Size=1728,953 Split=X
-  DockNode    ID=0x00000001 Parent=0x3FC20BEE SizeRef=258,810 Selected=0xF02CD328
-  DockNode    ID=0x00000002 Parent=0x3FC20BEE SizeRef=1468,810 Split=Y
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1728,866 CentralNode=1 Selected=0xE46ACB13
-    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1728,85 Selected=0x132FF2B0
+DockSpace     ID=0x3FC20BEE Window=0x9A404470 Pos=0,19 Size=1344,737 Split=X
+  DockNode    ID=0x00000003 Parent=0x3FC20BEE SizeRef=1155,990 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
+  DockNode    ID=0x00000004 Parent=0x3FC20BEE SizeRef=187,990 Split=Y Selected=0x132FF2B0
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=198,139 Selected=0xF02CD328
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=198,596 HiddenTabBar=1 Selected=0x132FF2B0
 
