added gimzo and deleting object from scene system

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,16 +4,16 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=1157,19
-Size=187,139
+Pos=1239,390
+Size=105,366
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000005,0
 
 [Window][Properties Winow]
-Pos=1157,19
-Size=187,737
+Pos=1239,19
+Size=105,369
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000001,0
 
 [Window][DockSpaceViewport_11111111]
 Size=1920,1009
@@ -26,7 +26,7 @@ Collapsed=0
 
 [Window][View Port]
 Pos=0,19
-Size=1155,737
+Size=1237,737
 Collapsed=0
 DockId=0x00000003,0
 
@@ -37,8 +37,8 @@ Collapsed=0
 
 [Docking][Data]
 DockSpace     ID=0x3FC20BEE Window=0x9A404470 Pos=0,19 Size=1344,737 Split=X
-  DockNode    ID=0x00000003 Parent=0x3FC20BEE SizeRef=1155,990 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
-  DockNode    ID=0x00000004 Parent=0x3FC20BEE SizeRef=187,990 Split=Y Selected=0x132FF2B0
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=198,139 Selected=0xF02CD328
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=198,596 HiddenTabBar=1 Selected=0x132FF2B0
+  DockNode    ID=0x00000003 Parent=0x3FC20BEE SizeRef=1237,737 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
+  DockNode    ID=0x00000004 Parent=0x3FC20BEE SizeRef=105,737 Split=Y Selected=0x132FF2B0
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=320,369 Selected=0x132FF2B0
+    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=320,366 Selected=0xF02CD328
 
