--- a/imgui.ini
+++ b/imgui.ini
@@ -4,14 +4,14 @@ Size=400,400
 Collapsed=0
 
 [Window][Inspector]
-Pos=1105,340
-Size=239,416
+Pos=1198,106
+Size=402,771
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000005,0
 
 [Window][Properties Winow]
-Pos=1105,19
-Size=239,319
+Pos=0,19
+Size=1600,85
 Collapsed=0
 DockId=0x00000002,0
 
@@ -21,12 +21,12 @@ Collapsed=0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1344,756
+Size=1600,877
 Collapsed=0
 
 [Window][View Port]
-Pos=0,19
-Size=1103,737
+Pos=0,106
+Size=1196,771
 Collapsed=0
 DockId=0x00000001,0
 
@@ -36,9 +36,9 @@ Size=613,582
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0x3FC20BEE Window=0x9A404470 Pos=0,19 Size=1344,737 Split=X
-  DockNode    ID=0x00000001 Parent=0x3FC20BEE SizeRef=1103,737 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
-  DockNode    ID=0x00000005 Parent=0x3FC20BEE SizeRef=239,737 Split=Y Selected=0x132FF2B0
-    DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=243,319 Selected=0x132FF2B0
-    DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=243,416 Selected=0xF02CD328
+DockSpace     ID=0x3FC20BEE Window=0x9A404470 Pos=0,19 Size=1600,858 Split=Y
+  DockNode    ID=0x00000002 Parent=0x3FC20BEE SizeRef=1344,85 Selected=0x132FF2B0
+  DockNode    ID=0x00000003 Parent=0x3FC20BEE SizeRef=1344,650 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1196,737 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
+    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=402,737 Selected=0xF02CD328
 
