--- a/imgui.ini
+++ b/imgui.ini
@@ -1,19 +1,19 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=227,241
+Size=400,88
 Collapsed=0
 
 [Window][Inspector]
-Pos=950,106
-Size=394,650
+Pos=1036,19
+Size=308,737
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties Winow]
 Pos=0,19
-Size=1344,85
+Size=98,737
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000003,0
 
 [Window][DockSpaceViewport_11111111]
 Size=1920,1009
@@ -25,8 +25,8 @@ Size=1344,756
 Collapsed=0
 
 [Window][View Port]
-Pos=0,106
-Size=948,650
+Pos=100,19
+Size=934,737
 Collapsed=0
 DockId=0x00000001,0
 
@@ -35,10 +35,18 @@ Pos=370,85
 Size=613,582
 Collapsed=0
 
+[Window][MenuBar]
+Pos=0,19
+Size=1344,37
+Collapsed=0
+DockId=0x00000002,0
+
 [Docking][Data]
-DockSpace     ID=0x3FC20BEE Window=0x9A404470 Pos=0,19 Size=1344,737 Split=Y
-  DockNode    ID=0x00000002 Parent=0x3FC20BEE SizeRef=1344,85 Selected=0x132FF2B0
-  DockNode    ID=0x00000003 Parent=0x3FC20BEE SizeRef=1344,650 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=948,737 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
-    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=394,737 Selected=0xF02CD328
+DockSpace       ID=0x3FC20BEE Window=0x9A404470 Pos=0,19 Size=1344,737 Split=Y
+  DockNode      ID=0x00000002 Parent=0x3FC20BEE SizeRef=1344,37 Selected=0x2B99DFF4
+  DockNode      ID=0x00000006 Parent=0x3FC20BEE SizeRef=1344,698 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=98,858 Selected=0x132FF2B0
+    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=1244,858 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1194,737 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
+      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=308,737 Selected=0xF02CD328
 
