--- a/imgui.ini
+++ b/imgui.ini
@@ -4,14 +4,14 @@ Size=400,88
 Collapsed=0
 
 [Window][Inspector]
-Pos=1036,19
-Size=308,737
+Pos=1055,19
+Size=289,737
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties Winow]
 Pos=0,19
-Size=98,737
+Size=102,737
 Collapsed=0
 DockId=0x00000003,0
 
@@ -25,8 +25,8 @@ Size=1344,756
 Collapsed=0
 
 [Window][View Port]
-Pos=100,19
-Size=934,737
+Pos=104,19
+Size=1240,737
 Collapsed=0
 DockId=0x00000001,0
 
@@ -45,8 +45,8 @@ DockId=0x00000002,0
 DockSpace       ID=0x3FC20BEE Window=0x9A404470 Pos=0,19 Size=1344,737 Split=Y
   DockNode      ID=0x00000002 Parent=0x3FC20BEE SizeRef=1344,37 Selected=0x2B99DFF4
   DockNode      ID=0x00000006 Parent=0x3FC20BEE SizeRef=1344,698 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=98,858 Selected=0x132FF2B0
-    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=1244,858 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1194,737 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
-      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=308,737 Selected=0xF02CD328
+    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=102,858 HiddenTabBar=1 Selected=0x132FF2B0
+    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=1816,858 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1398,737 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
+      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=289,737 Selected=0xF02CD328
 
