--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,88
 Collapsed=0
 
 [Window][Inspector]
-Pos=1055,19
-Size=289,737
+Pos=987,19
+Size=357,668
 Collapsed=0
 DockId=0x00000005,0
 
@@ -25,14 +25,14 @@ Size=1344,756
 Collapsed=0
 
 [Window][View Port]
-Pos=104,19
-Size=1240,737
+Pos=0,19
+Size=985,668
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Dear ImGui Demo]
-Pos=370,85
-Size=613,582
+Pos=435,45
+Size=825,1057
 Collapsed=0
 
 [Window][MenuBar]
@@ -41,12 +41,20 @@ Size=1344,37
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][Properties Window]
+Pos=0,689
+Size=1344,67
+Collapsed=0
+DockId=0x00000008,0
+
 [Docking][Data]
-DockSpace       ID=0x3FC20BEE Window=0x9A404470 Pos=0,19 Size=1344,737 Split=Y
-  DockNode      ID=0x00000002 Parent=0x3FC20BEE SizeRef=1344,37 Selected=0x2B99DFF4
-  DockNode      ID=0x00000006 Parent=0x3FC20BEE SizeRef=1344,698 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=102,858 HiddenTabBar=1 Selected=0x132FF2B0
-    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=1816,858 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1398,737 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
-      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=289,737 Selected=0xF02CD328
+DockSpace         ID=0x3FC20BEE Window=0x9A404470 Pos=0,19 Size=1344,737 Split=Y
+  DockNode        ID=0x00000007 Parent=0x3FC20BEE SizeRef=1344,992 Split=Y
+    DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=1344,37 Selected=0x2B99DFF4
+    DockNode      ID=0x00000006 Parent=0x00000007 SizeRef=1344,698 Split=X
+      DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=102,858 HiddenTabBar=1 Selected=0x132FF2B0
+      DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=1816,858 Split=X
+        DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1561,737 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
+        DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=357,737 HiddenTabBar=1 Selected=0xF02CD328
+  DockNode        ID=0x00000008 Parent=0x3FC20BEE SizeRef=1344,67 HiddenTabBar=1 Selected=0x595FE0D4
 
