--- a/imgui.ini
+++ b/imgui.ini
@@ -4,10 +4,10 @@ Size=400,88
 Collapsed=0
 
 [Window][Inspector]
-Pos=1600,19
-Size=320,992
+Pos=1481,19
+Size=439,992
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x0000000A,0
 
 [Window][Properties Winow]
 Pos=0,19
@@ -26,7 +26,7 @@ Collapsed=0
 
 [Window][View Port]
 Pos=0,19
-Size=1920,1061
+Size=1378,992
 Collapsed=0
 DockId=0x00000001,0
 
@@ -47,14 +47,22 @@ Size=1920,67
 Collapsed=0
 DockId=0x00000008,0
 
+[Window][Scene Hierarchy]
+Pos=1380,19
+Size=99,992
+Collapsed=0
+DockId=0x00000009,0
+
 [Docking][Data]
-DockSpace         ID=0x3FC20BEE Window=0x9A404470 Pos=0,19 Size=1920,1061 Split=Y
-  DockNode        ID=0x00000007 Parent=0x3FC20BEE SizeRef=1344,992 Split=Y
-    DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=1344,37 Selected=0x2B99DFF4
-    DockNode      ID=0x00000006 Parent=0x00000007 SizeRef=1344,698 Split=X
-      DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=102,858 HiddenTabBar=1 Selected=0x132FF2B0
-      DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=1816,858 Split=X
-        DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1598,737 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
-        DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=320,737 HiddenTabBar=1 Selected=0xF02CD328
-  DockNode        ID=0x00000008 Parent=0x3FC20BEE SizeRef=1344,67 HiddenTabBar=1 Selected=0x595FE0D4
+DockSpace           ID=0x3FC20BEE Window=0x9A404470 Pos=0,19 Size=1920,1061 Split=Y
+  DockNode          ID=0x00000007 Parent=0x3FC20BEE SizeRef=1344,992 Split=Y
+    DockNode        ID=0x00000002 Parent=0x00000007 SizeRef=1344,37 Selected=0x2B99DFF4
+    DockNode        ID=0x00000006 Parent=0x00000007 SizeRef=1344,698 Split=X
+      DockNode      ID=0x00000003 Parent=0x00000006 SizeRef=102,858 HiddenTabBar=1 Selected=0x132FF2B0
+      DockNode      ID=0x00000004 Parent=0x00000006 SizeRef=1816,858 Split=X
+        DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=1378,737 CentralNode=1 Selected=0xE46ACB13
+        DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=540,737 Split=X Selected=0xF02CD328
+          DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=99,992 Selected=0x9A68760C
+          DockNode  ID=0x0000000A Parent=0x00000005 SizeRef=439,992 Selected=0xF02CD328
+  DockNode          ID=0x00000008 Parent=0x3FC20BEE SizeRef=1344,67 HiddenTabBar=1 Selected=0x595FE0D4
 
