--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,88
 Collapsed=0
 
 [Window][Inspector]
-Pos=1102,125
-Size=338,599
+Pos=882,19
+Size=368,636
 Collapsed=0
 DockId=0x00000005,0
 
@@ -26,7 +26,7 @@ Collapsed=0
 
 [Window][View Port]
 Pos=0,19
-Size=1088,534
+Size=880,636
 Collapsed=0
 DockId=0x00000001,0
 
@@ -42,27 +42,27 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Properties Window]
-Pos=0,555
-Size=1088,255
+Pos=0,657
+Size=1250,153
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Scene Hierarchy]
-Pos=1090,19
-Size=350,791
+Pos=1252,19
+Size=188,791
 Collapsed=0
 DockId=0x0000000B,0
 
 [Docking][Data]
 DockSpace           ID=0x3FC20BEE Window=0x9A404470 Pos=0,19 Size=1440,791 Split=X
-  DockNode          ID=0x0000000A Parent=0x3FC20BEE SizeRef=1088,791 Split=Y
-    DockNode        ID=0x00000007 Parent=0x0000000A SizeRef=1344,534 Split=Y
+  DockNode          ID=0x0000000A Parent=0x3FC20BEE SizeRef=1410,791 Split=Y
+    DockNode        ID=0x00000007 Parent=0x0000000A SizeRef=1344,636 Split=Y
       DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=1344,37 Selected=0x2B99DFF4
       DockNode      ID=0x00000006 Parent=0x00000007 SizeRef=1344,698 Split=X
         DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=102,858 HiddenTabBar=1 Selected=0x132FF2B0
         DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=1816,858 Split=X
-          DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1260,737 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
-          DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=338,737 HiddenTabBar=1 Selected=0x9A68760C
-    DockNode        ID=0x00000008 Parent=0x0000000A SizeRef=1344,255 HiddenTabBar=1 Selected=0x595FE0D4
-  DockNode          ID=0x0000000B Parent=0x3FC20BEE SizeRef=350,791 Selected=0x9A68760C
+          DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1040,737 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
+          DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=368,737 HiddenTabBar=1 Selected=0xF02CD328
+    DockNode        ID=0x00000008 Parent=0x0000000A SizeRef=1344,153 HiddenTabBar=1 Selected=0x595FE0D4
+  DockNode          ID=0x0000000B Parent=0x3FC20BEE SizeRef=188,791 Selected=0x9A68760C
 
