--- a/imgui.ini
+++ b/imgui.ini
@@ -4,10 +4,10 @@ Size=400,88
 Collapsed=0
 
 [Window][Inspector]
-Pos=1010,19
-Size=327,674
+Pos=1224,19
+Size=311,858
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000001,0
 
 [Window][Properties Winow]
 Pos=0,19
@@ -21,14 +21,14 @@ Collapsed=0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1440,810
+Size=1600,877
 Collapsed=0
 
 [Window][View Port]
 Pos=0,19
-Size=1440,791
+Size=1222,741
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000004,0
 
 [Window][Dear ImGui Demo]
 Pos=435,45
@@ -42,27 +42,27 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Properties Window]
-Pos=0,695
-Size=1337,115
+Pos=0,762
+Size=1222,115
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Scene Hierarchy]
-Pos=1339,19
-Size=101,791
+Pos=1537,19
+Size=63,858
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000009,0
 
 [Docking][Data]
-DockSpace           ID=0x3FC20BEE Window=0x9A404470 Pos=0,19 Size=1440,791 Split=X
-  DockNode          ID=0x0000000A Parent=0x3FC20BEE SizeRef=1337,791 Split=Y
-    DockNode        ID=0x00000007 Parent=0x0000000A SizeRef=1344,674 Split=Y
-      DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=1344,37 Selected=0x2B99DFF4
-      DockNode      ID=0x00000006 Parent=0x00000007 SizeRef=1344,698 Split=X
-        DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=102,858 HiddenTabBar=1 Selected=0x132FF2B0
-        DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=1816,858 Split=X
-          DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1008,737 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
-          DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=327,737 HiddenTabBar=1 Selected=0xF02CD328
-    DockNode        ID=0x00000008 Parent=0x0000000A SizeRef=1344,115 HiddenTabBar=1 Selected=0x595FE0D4
-  DockNode          ID=0x0000000B Parent=0x3FC20BEE SizeRef=101,791 Selected=0x9A68760C
+DockSpace         ID=0x3FC20BEE Window=0x9A404470 Pos=0,19 Size=1600,858 Split=X
+  DockNode        ID=0x0000000A Parent=0x3FC20BEE SizeRef=1062,791 Split=Y
+    DockNode      ID=0x00000007 Parent=0x0000000A SizeRef=1344,674 Split=Y
+      DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=1344,37 Selected=0x2B99DFF4
+      DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=1344,698 Split=X
+        DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=102,858 HiddenTabBar=1 Selected=0x132FF2B0
+        DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=1816,858 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
+    DockNode      ID=0x00000008 Parent=0x0000000A SizeRef=1344,115 HiddenTabBar=1 Selected=0x595FE0D4
+  DockNode        ID=0x0000000B Parent=0x3FC20BEE SizeRef=376,791 Split=X Selected=0x9A68760C
+    DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=311,791 HiddenTabBar=1 Selected=0xF02CD328
+    DockNode      ID=0x00000009 Parent=0x0000000B SizeRef=63,791 Selected=0x9A68760C
 
