--- a/imgui.ini
+++ b/imgui.ini
@@ -4,10 +4,10 @@ Size=400,88
 Collapsed=0
 
 [Window][Inspector]
-Pos=926,19
-Size=298,791
+Pos=1602,19
+Size=158,1061
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x0000000B,0
 
 [Window][Properties Winow]
 Pos=0,19
@@ -26,7 +26,7 @@ Collapsed=0
 
 [Window][View Port]
 Pos=0,19
-Size=1440,791
+Size=1280,674
 Collapsed=0
 DockId=0x00000004,0
 
@@ -43,26 +43,26 @@ DockId=0x00000002,0
 
 [Window][Properties Window]
 Pos=0,695
-Size=924,115
+Size=1280,115
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Scene Hierarchy]
-Pos=1226,19
-Size=214,791
+Pos=1282,19
+Size=158,791
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000005,0
 
 [Docking][Data]
-DockSpace         ID=0x3FC20BEE Window=0x9A404470 Pos=0,19 Size=1440,791 Split=X
-  DockNode        ID=0x0000000A Parent=0x3FC20BEE SizeRef=924,791 Split=Y
-    DockNode      ID=0x00000007 Parent=0x0000000A SizeRef=1344,674 Split=Y
-      DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=1344,37 Selected=0x2B99DFF4
-      DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=1344,698 Split=X
-        DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=102,858 HiddenTabBar=1 Selected=0x132FF2B0
-        DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=1816,858 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
-    DockNode      ID=0x00000008 Parent=0x0000000A SizeRef=1344,115 HiddenTabBar=1 Selected=0x595FE0D4
-  DockNode        ID=0x0000000B Parent=0x3FC20BEE SizeRef=514,791 Split=X Selected=0x9A68760C
-    DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=298,791 HiddenTabBar=1 Selected=0xF02CD328
-    DockNode      ID=0x00000009 Parent=0x0000000B SizeRef=214,791 Selected=0x9A68760C
+DockSpace           ID=0x3FC20BEE Window=0x9A404470 Pos=0,19 Size=1440,791 Split=X
+  DockNode          ID=0x00000001 Parent=0x3FC20BEE SizeRef=1280,791 Split=X
+    DockNode        ID=0x0000000A Parent=0x00000001 SizeRef=1120,791 Split=Y
+      DockNode      ID=0x00000007 Parent=0x0000000A SizeRef=1344,674 Split=Y
+        DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=1344,37 Selected=0x2B99DFF4
+        DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=1344,698 Split=X
+          DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=102,858 HiddenTabBar=1 Selected=0x132FF2B0
+          DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=1816,858 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
+      DockNode      ID=0x00000008 Parent=0x0000000A SizeRef=1344,115 HiddenTabBar=1 Selected=0x595FE0D4
+    DockNode        ID=0x0000000B Parent=0x00000001 SizeRef=158,791 HiddenTabBar=1 Selected=0xF02CD328
+  DockNode          ID=0x00000005 Parent=0x3FC20BEE SizeRef=158,791 HiddenTabBar=1 Selected=0x9A68760C
 
