--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,88
 Collapsed=0
 
 [Window][Inspector]
-Pos=919,19
-Size=309,791
+Pos=1261,19
+Size=344,811
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -21,12 +21,12 @@ Collapsed=0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1600,900
+Size=1920,1080
 Collapsed=0
 
 [Window][View Port]
 Pos=0,19
-Size=1600,881
+Size=1605,811
 Collapsed=0
 DockId=0x00000004,0
 
@@ -42,27 +42,27 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Properties Window]
-Pos=0,731
-Size=1347,169
+Pos=0,832
+Size=1920,248
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000009,0
 
 [Window][Scene Hierarchy]
-Pos=1349,19
-Size=251,881
+Pos=1607,19
+Size=313,811
 Collapsed=0
 DockId=0x00000005,0
 
 [Docking][Data]
-DockSpace           ID=0x3FC20BEE Window=0x9A404470 Pos=0,19 Size=1600,881 Split=X
-  DockNode          ID=0x00000001 Parent=0x3FC20BEE SizeRef=1187,791 Split=X
-    DockNode        ID=0x0000000A Parent=0x00000001 SizeRef=917,791 Split=Y
-      DockNode      ID=0x00000007 Parent=0x0000000A SizeRef=1344,620 Split=Y
-        DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=1344,37 Selected=0x2B99DFF4
-        DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=1344,698 Split=X
+DockSpace           ID=0x3FC20BEE Window=0x9A404470 Pos=0,19 Size=1920,1061 Split=Y
+  DockNode          ID=0x00000008 Parent=0x3FC20BEE SizeRef=1440,811 Split=X
+    DockNode        ID=0x00000001 Parent=0x00000008 SizeRef=1605,791 Split=X
+      DockNode      ID=0x0000000A Parent=0x00000001 SizeRef=1259,791 Split=Y
+        DockNode    ID=0x00000002 Parent=0x0000000A SizeRef=1344,37 Selected=0x2B99DFF4
+        DockNode    ID=0x00000006 Parent=0x0000000A SizeRef=1344,698 Split=X
           DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=102,858 HiddenTabBar=1 Selected=0x132FF2B0
           DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=1816,858 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
-      DockNode      ID=0x00000008 Parent=0x0000000A SizeRef=1344,169 HiddenTabBar=1 Selected=0x595FE0D4
-    DockNode        ID=0x0000000B Parent=0x00000001 SizeRef=309,791 HiddenTabBar=1 Selected=0xF02CD328
-  DockNode          ID=0x00000005 Parent=0x3FC20BEE SizeRef=251,791 HiddenTabBar=1 Selected=0x9A68760C
+      DockNode      ID=0x0000000B Parent=0x00000001 SizeRef=344,791 HiddenTabBar=1 Selected=0xF02CD328
+    DockNode        ID=0x00000005 Parent=0x00000008 SizeRef=313,791 HiddenTabBar=1 Selected=0x9A68760C
+  DockNode          ID=0x00000009 Parent=0x3FC20BEE SizeRef=1440,248 HiddenTabBar=1 Selected=0x595FE0D4
 
