--- a/imgui.ini
+++ b/imgui.ini
@@ -4,10 +4,10 @@ Size=400,88
 Collapsed=0
 
 [Window][Inspector]
-Pos=1526,19
-Size=178,1027
+Pos=17,38
+Size=15,4
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000008,1
 
 [Window][Properties Winow]
 Pos=0,19
@@ -21,12 +21,12 @@ Collapsed=0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1600,900
+Size=1440,810
 Collapsed=0
 
 [Window][View Port]
-Pos=0,19
-Size=1600,881
+Pos=0,38
+Size=1157,662
 Collapsed=0
 DockId=0x00000004,0
 
@@ -42,27 +42,25 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Properties Window]
-Pos=0,595
-Size=1440,215
+Pos=0,702
+Size=1157,108
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000007,0
 
 [Window][Scene Hierarchy]
-Pos=905,19
-Size=535,574
+Pos=1159,38
+Size=281,772
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000008,0
 
 [Docking][Data]
-DockSpace           ID=0x3FC20BEE Window=0x9A404470 Pos=0,19 Size=1600,881 Split=Y
-  DockNode          ID=0x00000008 Parent=0x3FC20BEE SizeRef=1440,844 Split=X
-    DockNode        ID=0x00000001 Parent=0x00000008 SizeRef=1383,791 Split=X
-      DockNode      ID=0x0000000A Parent=0x00000001 SizeRef=1524,791 Split=Y
-        DockNode    ID=0x00000002 Parent=0x0000000A SizeRef=1344,37 Selected=0x2B99DFF4
-        DockNode    ID=0x00000006 Parent=0x0000000A SizeRef=1344,698 Split=X
-          DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=102,858 HiddenTabBar=1 Selected=0x132FF2B0
-          DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=1816,858 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
-      DockNode      ID=0x0000000B Parent=0x00000001 SizeRef=178,791 HiddenTabBar=1 Selected=0xF02CD328
-    DockNode        ID=0x00000005 Parent=0x00000008 SizeRef=535,791 HiddenTabBar=1 Selected=0x9A68760C
-  DockNode          ID=0x00000009 Parent=0x3FC20BEE SizeRef=1440,215 HiddenTabBar=1 Selected=0x595FE0D4
+DockSpace         ID=0x3FC20BEE Window=0x9A404470 Pos=0,38 Size=1440,772 Split=X
+  DockNode        ID=0x00000001 Parent=0x3FC20BEE SizeRef=1157,1042 Split=Y
+    DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=1920,662 Split=Y HiddenTabBar=1
+      DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1344,37 Selected=0x2B99DFF4
+      DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=1344,698 Split=X
+        DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=102,858 HiddenTabBar=1 Selected=0x132FF2B0
+        DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=1816,858 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
+    DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=1920,108 HiddenTabBar=1 Selected=0x595FE0D4
+  DockNode        ID=0x00000008 Parent=0x3FC20BEE SizeRef=281,1042 Selected=0x9A68760C
 
