--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,88
 Collapsed=0
 
 [Window][Inspector]
-Pos=1201,38
-Size=239,772
+Pos=1652,38
+Size=268,1042
 Collapsed=0
 DockId=0x00000008,1
 
@@ -21,12 +21,12 @@ Collapsed=0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1440,810
+Size=1920,1080
 Collapsed=0
 
 [Window][View Port]
-Pos=0,38
-Size=1199,659
+Pos=206,38
+Size=1444,911
 Collapsed=0
 DockId=0x00000004,0
 
@@ -42,25 +42,33 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Properties Window]
-Pos=0,699
-Size=1199,111
+Pos=206,951
+Size=1444,129
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Scene Hierarchy]
-Pos=1201,38
-Size=239,772
+Pos=1652,38
+Size=268,1042
 Collapsed=0
 DockId=0x00000008,0
 
+[Window][Resources Manager]
+Pos=0,38
+Size=204,1042
+Collapsed=0
+DockId=0x00000009,0
+
 [Docking][Data]
-DockSpace         ID=0x3FC20BEE Window=0x9A404470 Pos=0,38 Size=1440,772 Split=X
-  DockNode        ID=0x00000001 Parent=0x3FC20BEE SizeRef=1199,1042 Split=Y
-    DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=1920,659 Split=Y HiddenTabBar=1
-      DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1344,37 Selected=0x2B99DFF4
-      DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=1344,698 Split=X
-        DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=102,858 HiddenTabBar=1 Selected=0x132FF2B0
-        DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=1816,858 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
-    DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=1920,111 HiddenTabBar=1 Selected=0x595FE0D4
-  DockNode        ID=0x00000008 Parent=0x3FC20BEE SizeRef=239,1042 Selected=0x9A68760C
+DockSpace           ID=0x3FC20BEE Window=0x9A404470 Pos=0,38 Size=1920,1042 Split=X
+  DockNode          ID=0x00000009 Parent=0x3FC20BEE SizeRef=204,1042 Selected=0xD04BF784
+  DockNode          ID=0x0000000A Parent=0x3FC20BEE SizeRef=1714,1042 Split=X
+    DockNode        ID=0x00000001 Parent=0x0000000A SizeRef=1444,1042 Split=Y
+      DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=1920,731 Split=Y HiddenTabBar=1
+        DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1344,37 Selected=0x2B99DFF4
+        DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=1344,698 Split=X
+          DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=102,858 HiddenTabBar=1 Selected=0x132FF2B0
+          DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=1816,858 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
+      DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=1920,129 HiddenTabBar=1 Selected=0x595FE0D4
+    DockNode        ID=0x00000008 Parent=0x0000000A SizeRef=268,1042 Selected=0xF02CD328
 
