refactored resources manager

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,10 +4,10 @@ Size=400,88
 Collapsed=0
 
 [Window][Inspector]
-Pos=1652,38
-Size=268,1042
+Pos=1606,38
+Size=314,852
 Collapsed=0
-DockId=0x00000008,1
+DockId=0x00000001,0
 
 [Window][Properties Winow]
 Pos=0,19
@@ -25,8 +25,8 @@ Size=1920,1080
 Collapsed=0
 
 [Window][View Port]
-Pos=206,38
-Size=1444,911
+Pos=207,38
+Size=1397,911
 Collapsed=0
 DockId=0x00000004,0
 
@@ -42,33 +42,41 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Properties Window]
-Pos=206,951
-Size=1444,129
+Pos=207,951
+Size=1397,129
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Scene Hierarchy]
-Pos=1652,38
-Size=268,1042
+Pos=25,38
+Size=7,4
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x0000000D,0
 
 [Window][Resources Manager]
 Pos=0,38
-Size=204,1042
+Size=205,1042
 Collapsed=0
 DockId=0x00000009,0
 
+[Window][Help Panel]
+Pos=1606,892
+Size=314,188
+Collapsed=0
+DockId=0x0000000D,0
+
 [Docking][Data]
 DockSpace           ID=0x3FC20BEE Window=0x9A404470 Pos=0,38 Size=1920,1042 Split=X
-  DockNode          ID=0x00000009 Parent=0x3FC20BEE SizeRef=204,1042 Selected=0xD04BF784
-  DockNode          ID=0x0000000A Parent=0x3FC20BEE SizeRef=1714,1042 Split=X
-    DockNode        ID=0x00000001 Parent=0x0000000A SizeRef=1444,1042 Split=Y
-      DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=1920,731 Split=Y HiddenTabBar=1
+  DockNode          ID=0x0000000B Parent=0x3FC20BEE SizeRef=1604,1042 Split=X
+    DockNode        ID=0x00000009 Parent=0x0000000B SizeRef=205,1042 HiddenTabBar=1 Selected=0xD04BF784
+    DockNode        ID=0x0000000A Parent=0x0000000B SizeRef=1397,1042 Split=Y
+      DockNode      ID=0x00000005 Parent=0x0000000A SizeRef=1920,731 Split=Y HiddenTabBar=1
         DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1344,37 Selected=0x2B99DFF4
         DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=1344,698 Split=X
           DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=102,858 HiddenTabBar=1 Selected=0x132FF2B0
           DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=1816,858 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
-      DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=1920,129 HiddenTabBar=1 Selected=0x595FE0D4
-    DockNode        ID=0x00000008 Parent=0x0000000A SizeRef=268,1042 Selected=0xF02CD328
+      DockNode      ID=0x00000007 Parent=0x0000000A SizeRef=1920,129 HiddenTabBar=1 Selected=0x595FE0D4
+  DockNode          ID=0x0000000C Parent=0x3FC20BEE SizeRef=314,1042 Split=Y Selected=0xB1DD8036
+    DockNode        ID=0x00000001 Parent=0x0000000C SizeRef=314,852 HiddenTabBar=1 Selected=0xF02CD328
+    DockNode        ID=0x0000000D Parent=0x0000000C SizeRef=314,188 HiddenTabBar=1 Selected=0xB1DD8036
 
