fixed bug in dynamic layer

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,10 +4,10 @@ Size=400,88
 Collapsed=0
 
 [Window][Inspector]
-Pos=1606,38
-Size=314,852
+Pos=1185,38
+Size=255,677
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x0000000B,0
 
 [Window][Properties Winow]
 Pos=0,19
@@ -21,12 +21,12 @@ Collapsed=0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1920,1080
+Size=1440,810
 Collapsed=0
 
 [Window][View Port]
-Pos=207,38
-Size=1397,911
+Pos=262,38
+Size=917,32
 Collapsed=0
 DockId=0x00000004,0
 
@@ -42,41 +42,49 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Properties Window]
-Pos=207,951
-Size=1397,129
+Pos=262,72
+Size=457,738
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000D,0
 
 [Window][Scene Hierarchy]
 Pos=25,38
 Size=7,4
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x0000000C,0
 
 [Window][Resources Manager]
 Pos=0,38
-Size=205,1042
+Size=260,772
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000008,0
 
 [Window][Help Panel]
-Pos=1606,892
-Size=314,188
+Pos=1181,38
+Size=259,772
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x0000000C,0
+
+[Window][Console]
+Pos=721,72
+Size=458,738
+Collapsed=0
+DockId=0x0000000E,0
 
 [Docking][Data]
-DockSpace           ID=0x3FC20BEE Window=0x9A404470 Pos=0,38 Size=1920,1042 Split=X
-  DockNode          ID=0x0000000B Parent=0x3FC20BEE SizeRef=1604,1042 Split=X
-    DockNode        ID=0x00000009 Parent=0x0000000B SizeRef=205,1042 HiddenTabBar=1 Selected=0xD04BF784
-    DockNode        ID=0x0000000A Parent=0x0000000B SizeRef=1397,1042 Split=Y
-      DockNode      ID=0x00000005 Parent=0x0000000A SizeRef=1920,731 Split=Y HiddenTabBar=1
+DockSpace           ID=0x3FC20BEE Window=0x9A404470 Pos=0,38 Size=1440,772 Split=X
+  DockNode          ID=0x00000001 Parent=0x3FC20BEE SizeRef=1179,862 Split=X
+    DockNode        ID=0x00000008 Parent=0x00000001 SizeRef=260,1042 HiddenTabBar=1 Selected=0xD04BF784
+    DockNode        ID=0x0000000A Parent=0x00000001 SizeRef=917,1042 Split=Y
+      DockNode      ID=0x00000005 Parent=0x0000000A SizeRef=1920,32 Split=Y HiddenTabBar=1
         DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1344,37 Selected=0x2B99DFF4
         DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=1344,698 Split=X
           DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=102,858 HiddenTabBar=1 Selected=0x132FF2B0
           DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=1816,858 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
-      DockNode      ID=0x00000007 Parent=0x0000000A SizeRef=1920,129 HiddenTabBar=1 Selected=0x595FE0D4
-  DockNode          ID=0x0000000C Parent=0x3FC20BEE SizeRef=314,1042 Split=Y Selected=0xB1DD8036
-    DockNode        ID=0x00000001 Parent=0x0000000C SizeRef=314,852 HiddenTabBar=1 Selected=0xF02CD328
-    DockNode        ID=0x0000000D Parent=0x0000000C SizeRef=314,188 HiddenTabBar=1 Selected=0xB1DD8036
+      DockNode      ID=0x00000007 Parent=0x0000000A SizeRef=1920,738 Split=X Selected=0x595FE0D4
+        DockNode    ID=0x0000000D Parent=0x00000007 SizeRef=457,93 HiddenTabBar=1 Selected=0x595FE0D4
+        DockNode    ID=0x0000000E Parent=0x00000007 SizeRef=458,93 HiddenTabBar=1 Selected=0xF9BEF62A
+  DockNode          ID=0x00000009 Parent=0x3FC20BEE SizeRef=259,862 Split=Y Selected=0xB1DD8036
+    DockNode        ID=0x0000000B Parent=0x00000009 SizeRef=255,756 HiddenTabBar=1 Selected=0xF02CD328
+    DockNode        ID=0x0000000C Parent=0x00000009 SizeRef=255,104 HiddenTabBar=1 Selected=0xB1DD8036
 
