--- a/imgui.ini
+++ b/imgui.ini
@@ -1,11 +1,11 @@
 [Window][Debug##Default]
-Pos=227,241
+Pos=501,208
 Size=400,88
 Collapsed=0
 
 [Window][Inspector]
-Pos=1229,38
-Size=211,677
+Pos=1240,38
+Size=200,677
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -25,8 +25,8 @@ Size=1440,810
 Collapsed=0
 
 [Window][View Port]
-Pos=359,38
-Size=868,601
+Pos=243,38
+Size=789,563
 Collapsed=0
 DockId=0x00000004,0
 
@@ -42,10 +42,10 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Properties Window]
-Pos=359,641
-Size=350,169
+Pos=243,603
+Size=789,207
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x00000007,1
 
 [Window][Scene Hierarchy]
 Pos=25,38
@@ -55,36 +55,40 @@ DockId=0x0000000C,0
 
 [Window][Resources Manager]
 Pos=0,38
-Size=357,772
+Size=241,772
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Help Panel]
-Pos=1229,38
-Size=211,772
+Pos=1034,38
+Size=406,772
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Console]
-Pos=711,641
-Size=516,169
+Pos=243,603
+Size=789,207
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000007,0
+
+[Window][Creator]
+Pos=1034,38
+Size=406,772
+Collapsed=0
+DockId=0x0000000C,1
 
 [Docking][Data]
 DockSpace           ID=0x3FC20BEE Window=0x9A404470 Pos=0,38 Size=1440,772 Split=X
-  DockNode          ID=0x00000001 Parent=0x3FC20BEE SizeRef=1387,862 Split=X
-    DockNode        ID=0x00000008 Parent=0x00000001 SizeRef=357,1042 HiddenTabBar=1 Selected=0xD04BF784
-    DockNode        ID=0x0000000A Parent=0x00000001 SizeRef=1028,1042 Split=Y
-      DockNode      ID=0x00000005 Parent=0x0000000A SizeRef=1920,691 Split=Y HiddenTabBar=1
+  DockNode          ID=0x00000001 Parent=0x3FC20BEE SizeRef=1032,862 Split=X
+    DockNode        ID=0x00000008 Parent=0x00000001 SizeRef=241,1042 HiddenTabBar=1 Selected=0xD04BF784
+    DockNode        ID=0x0000000A Parent=0x00000001 SizeRef=789,1042 Split=Y
+      DockNode      ID=0x00000005 Parent=0x0000000A SizeRef=1920,653 Split=Y HiddenTabBar=1
         DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1344,37 Selected=0x2B99DFF4
         DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=1344,698 Split=X
           DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=102,858 HiddenTabBar=1 Selected=0x132FF2B0
           DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=1816,858 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
-      DockNode      ID=0x00000007 Parent=0x0000000A SizeRef=1920,169 Split=X Selected=0x595FE0D4
-        DockNode    ID=0x0000000D Parent=0x00000007 SizeRef=415,93 HiddenTabBar=1 Selected=0x595FE0D4
-        DockNode    ID=0x0000000E Parent=0x00000007 SizeRef=611,93 HiddenTabBar=1 Selected=0xF9BEF62A
-  DockNode          ID=0x00000009 Parent=0x3FC20BEE SizeRef=211,862 Split=Y Selected=0xB1DD8036
+      DockNode      ID=0x00000007 Parent=0x0000000A SizeRef=1920,207 Selected=0x595FE0D4
+  DockNode          ID=0x00000009 Parent=0x3FC20BEE SizeRef=406,862 Split=Y Selected=0xB1DD8036
     DockNode        ID=0x0000000B Parent=0x00000009 SizeRef=255,756 HiddenTabBar=1 Selected=0xF02CD328
-    DockNode        ID=0x0000000C Parent=0x00000009 SizeRef=255,104 HiddenTabBar=1 Selected=0xB1DD8036
+    DockNode        ID=0x0000000C Parent=0x00000009 SizeRef=255,104 Selected=0x73BBD3FF
 
