--- a/imgui.ini
+++ b/imgui.ini
@@ -4,10 +4,10 @@ Size=400,88
 Collapsed=0
 
 [Window][Inspector]
-Pos=1292,38
-Size=308,756
+Pos=1128,38
+Size=312,772
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x0000000C,2
 
 [Window][Properties Winow]
 Pos=0,19
@@ -21,12 +21,12 @@ Collapsed=0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1920,1080
+Size=1600,900
 Collapsed=0
 
 [Window][View Port]
-Pos=207,38
-Size=1380,876
+Pos=0,38
+Size=1600,862
 Collapsed=0
 DockId=0x00000004,0
 
@@ -42,10 +42,10 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Properties Window]
-Pos=207,916
-Size=1380,164
+Pos=259,643
+Size=867,167
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000D,0
 
 [Window][Scene Hierarchy]
 Pos=25,38
@@ -55,54 +55,50 @@ DockId=0x0000000C,0
 
 [Window][Resources Manager]
 Pos=0,38
-Size=205,1042
+Size=257,772
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000007,0
 
 [Window][Help Panel]
-Pos=1589,38
-Size=331,1042
+Pos=1128,38
+Size=312,772
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Console]
-Pos=0,38
-Size=1920,180
+Pos=9,41
+Size=6,1
 Collapsed=0
 DockId=0x0000000D,0
 
 [Window][Creator]
-Pos=1589,38
-Size=331,1042
+Pos=1128,38
+Size=312,772
 Collapsed=0
 DockId=0x0000000C,1
 
 [Window][File Browser]
-Pos=1589,38
-Size=331,1042
+Pos=1328,38
+Size=272,862
 Collapsed=0
 DockId=0x0000000C,2
 
 [Window][Settings]
-Pos=1624,38
-Size=296,1042
+Pos=17,38
+Size=15,4
 Collapsed=0
 DockId=0x0000000C,2
 
 [Docking][Data]
-DockSpace             ID=0x3FC20BEE Window=0x9A404470 Pos=0,38 Size=1920,1042 Split=Y
-  DockNode            ID=0x0000000D Parent=0x3FC20BEE SizeRef=1920,180 Selected=0xF9BEF62A
-  DockNode            ID=0x0000000E Parent=0x3FC20BEE SizeRef=1920,860 Split=X
-    DockNode          ID=0x00000001 Parent=0x0000000E SizeRef=1107,862 Split=X
-      DockNode        ID=0x00000008 Parent=0x00000001 SizeRef=205,1042 HiddenTabBar=1 Selected=0xD04BF784
-      DockNode        ID=0x0000000A Parent=0x00000001 SizeRef=900,1042 Split=Y
-        DockNode      ID=0x00000005 Parent=0x0000000A SizeRef=1920,606 Split=Y HiddenTabBar=1
-          DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1344,37 Selected=0x2B99DFF4
-          DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=1344,698 Split=X
-            DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=102,858 HiddenTabBar=1 Selected=0x132FF2B0
-            DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=1816,858 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
-        DockNode      ID=0x00000007 Parent=0x0000000A SizeRef=1920,164 HiddenTabBar=1 Selected=0x595FE0D4
-    DockNode          ID=0x00000009 Parent=0x0000000E SizeRef=331,862 Split=Y Selected=0xB1DD8036
-      DockNode        ID=0x0000000B Parent=0x00000009 SizeRef=255,756 HiddenTabBar=1 Selected=0xF02CD328
-      DockNode        ID=0x0000000C Parent=0x00000009 SizeRef=255,104 Selected=0x2389D759
+DockSpace           ID=0x3FC20BEE Window=0x9A404470 Pos=0,38 Size=1600,862 Split=X
+  DockNode          ID=0x00000008 Parent=0x3FC20BEE SizeRef=1126,862 Split=X
+    DockNode        ID=0x00000007 Parent=0x00000008 SizeRef=257,862 Selected=0xD04BF784
+    DockNode        ID=0x0000000A Parent=0x00000008 SizeRef=867,862 Split=Y
+      DockNode      ID=0x00000005 Parent=0x0000000A SizeRef=1440,603 Split=Y HiddenTabBar=1
+        DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1344,37 Selected=0x2B99DFF4
+        DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=1344,698 Split=X
+          DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=102,858 HiddenTabBar=1 Selected=0x132FF2B0
+          DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=1816,858 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
+      DockNode      ID=0x0000000D Parent=0x0000000A SizeRef=1440,167 HiddenTabBar=1 Selected=0x595FE0D4
+  DockNode          ID=0x0000000C Parent=0x3FC20BEE SizeRef=312,862 Selected=0xF02CD328
 
