--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,88
 Collapsed=0
 
 [Window][Inspector]
-Pos=1266,38
-Size=334,862
+Pos=1235,38
+Size=365,862
 Collapsed=0
 DockId=0x0000000C,2
 
@@ -25,8 +25,8 @@ Size=1600,900
 Collapsed=0
 
 [Window][View Port]
-Pos=239,38
-Size=963,675
+Pos=0,38
+Size=1600,862
 Collapsed=0
 DockId=0x00000004,0
 
@@ -42,8 +42,8 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Properties Window]
-Pos=239,715
-Size=963,185
+Pos=0,779
+Size=1233,121
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -55,13 +55,13 @@ DockId=0x0000000C,0
 
 [Window][Resources Manager]
 Pos=0,38
-Size=237,862
+Size=410,862
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Help Panel]
-Pos=1204,38
-Size=396,862
+Pos=1235,38
+Size=365,862
 Collapsed=0
 DockId=0x0000000C,1
 
@@ -72,33 +72,33 @@ Collapsed=0
 DockId=0x0000000D,0
 
 [Window][Creator]
-Pos=1204,38
-Size=396,862
+Pos=1235,38
+Size=365,862
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][File Browser]
-Pos=1204,38
-Size=396,862
+Pos=1235,38
+Size=365,862
 Collapsed=0
 DockId=0x0000000C,2
 
 [Window][Settings]
-Pos=1334,38
-Size=266,862
+Pos=1424,38
+Size=176,862
 Collapsed=0
 DockId=0x0000000C,2
 
 [Docking][Data]
 DockSpace           ID=0x3FC20BEE Window=0x9A404470 Pos=0,38 Size=1600,862 Split=X
-  DockNode          ID=0x00000008 Parent=0x3FC20BEE SizeRef=1202,862 Split=X
-    DockNode        ID=0x00000007 Parent=0x00000008 SizeRef=237,862 HiddenTabBar=1 Selected=0xD04BF784
-    DockNode        ID=0x0000000A Parent=0x00000008 SizeRef=963,862 Split=Y
-      DockNode      ID=0x00000005 Parent=0x0000000A SizeRef=1440,675 Split=Y HiddenTabBar=1
+  DockNode          ID=0x00000008 Parent=0x3FC20BEE SizeRef=1233,862 Split=X
+    DockNode        ID=0x00000007 Parent=0x00000008 SizeRef=410,862 HiddenTabBar=1 Selected=0xD04BF784
+    DockNode        ID=0x0000000A Parent=0x00000008 SizeRef=1010,862 Split=Y
+      DockNode      ID=0x00000005 Parent=0x0000000A SizeRef=1440,739 Split=Y HiddenTabBar=1
         DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1344,37 Selected=0x2B99DFF4
         DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=1344,698 Split=X
           DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=102,858 HiddenTabBar=1 Selected=0x132FF2B0
           DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=1816,858 CentralNode=1 HiddenTabBar=1 Selected=0xE46ACB13
-      DockNode      ID=0x0000000D Parent=0x0000000A SizeRef=1440,185 HiddenTabBar=1 Selected=0x595FE0D4
-  DockNode          ID=0x0000000C Parent=0x3FC20BEE SizeRef=396,862 Selected=0x2389D759
+      DockNode      ID=0x0000000D Parent=0x0000000A SizeRef=1440,121 HiddenTabBar=1 Selected=0x595FE0D4
+  DockNode          ID=0x0000000C Parent=0x3FC20BEE SizeRef=365,862 Selected=0xB1DD8036
 
